# mlx-whisper-GUI

./: main.py  pyproject.toml  sample.py
