[project]
name = "whisper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "customtkinter>=5.2.2",
    "huggingface-hub>=0.30.2",
    "mlx>=0.11",
    "mlx-whisper>=0.4.2",
    "more-itertools>=10.6.0",
    "numba>=0.61.2",
    "numpy>=2.2.4",
    "pyaudio>=0.2.14",
    "scipy>=1.15.2",
    "tiktoken>=0.9.0",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
]
